Fix misaligned screenshots
And set ratio to 16/9.

--- a/common_static/css/lutris.less
+++ b/common_static/css/lutris.less
@@ -3,6 +3,9 @@
 
 /* == Variables */
 @siteWidth: 960px;
+@screenshotsWidth: 690px;
+@screenshotsHeight: 388px;
+
 @darkBackground: #444;
 @darkerBackground: #222;
 @sansSerif: "Roboto", Arial, sans;
@@ -583,27 +586,33 @@ form {
 }
 
 #screenshots {
+  background-color: #111;
   box-shadow: 0 5px 5px -2px rgba(0,0,0,.6);
-  img {
-    cursor: zoom-in;
-    cursor: -webkit-zoom-in;
-  }
 
   .screenshots-slider {
-    background-color: #111;
-    height: 431px;
-    width: 690px;
-    box-shadow: inset 0 0 60px #000;
-    .unpublished {
-      border-left: 2px solid #C50000;
+    .centered;
+    height: @screenshotsHeight;
+    width: @screenshotsWidth;
+  }
+  .screenshot-menu {
+    opacity: 0;
+    padding-bottom: 50px;
+    position: absolute;
+    width: @screenshotsWidth;
+    &:hover { opacity: 1; }
+  }
+  .screenshot {
+    .centered-vertical;
+    background-color: #000;
+    height: @screenshotsHeight;
+    width: @screenshotsWidth;
+    img {
+      cursor: zoom-in;
+      cursor: -webkit-zoom-in;
     }
-    .screenshot-menu {
-      opacity: 0;
-      padding-bottom: 50px;
-      position: absolute;
-      width: 690px;
-      &:hover { opacity: 1; }
-    }
+  }
+  .unpublished {
+    border-left: 2px solid #C50000;
   }
 }
 
